add annoucement and trending html section

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <h3>Your Projects</h3>
                 <div class="project">
                     <div class="textSection">
-                        <h5>Project 1</h5>
+                        <h5>Super Cool Project</h5>
                         <p>This is my first project. Very cool project to start with. Was a lot of fun!</p>
                     </div>
                     <div class="buttonSection">
@@ -100,7 +100,7 @@
                 </div>
                 <div class="project">
                     <div class="textSection">
-                        <h5>Project 2</h5>
+                        <h5>Quantum Commit</h5>
                         <p>This is my 2nd project. Very cool project. Was a lot of fun! I am still learning</p>
                     </div>
                     <div class="buttonSection">
@@ -111,7 +111,7 @@
                 </div>
                 <div class="project">
                     <div class="textSection">
-                        <h5>Project 3</h5>
+                        <h5>Build Better Bots</h5>
                         <p>This is my 3rd project.</p>
                     </div>
                     <div class="buttonSection">
@@ -122,7 +122,7 @@
                 </div>
                 <div class="project">
                     <div class="textSection">
-                        <h5>Project 4</h5>
+                        <h5>Pug Generator</h5>
                         <p>This is my 4th project. Very cool project. Was a lot of fun! I feel like I am getting a good grasp on things, but still far from an expert. A few more projects before I feel fully confident.</p>
                     </div>
                     <div class="buttonSection">
@@ -133,7 +133,7 @@
                 </div>
                 <div class="project">
                     <div class="textSection">
-                        <h5>Project 5</h5>
+                        <h5>Code the Future</h5>
                         <p>This is my 5th project. Very cool project. Was a lot of fun! I am getting much better</p>
                     </div>
                     <div class="buttonSection">
@@ -144,7 +144,7 @@
                 </div>
                 <div class="project">
                     <div class="textSection">
-                        <h5>Project 6</h5>
+                        <h5>Pixels to Protocols</h5>
                         <p>This is my last project. Very cool project to end it on. Was a lot of fun and a great learning experience!</p>
                     </div>
                     <div class="buttonSection">
@@ -154,8 +154,62 @@
                     </div>
                 </div>
             </div>
+            <div class="rightBar">
+                <div class="announcements">
+                    <h3>Announcements</h3>
+                    <div class="annoucement-content">
+                        <div class="announcement">
+                            <h6>Site Maintenance</h6>
+                            <p>Our site will be undergoing scheduled maintenance to improve performance and reliability. Some features may be temporarily unavailable during this time.</p>
+                        </div>
+                        <div class="announcement">
+                            <h6>New Menu Items Now Available!</h6>
+                            <p>We've added fresh, seasonal dishes to our menu—come discover your new favorites today!</p>
+                        </div>
+                        <div class="announcement">
+                            <h6>Updated Privacy Policy</h6>
+                            <p>We’ve updated our Privacy Policy to provide greater clarity on how we collect, use, and protect your information. Please review the changes to stay informed.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="trending">
+                    <h3>Trending</h3>
+                    <div class="trending-content">
+                        <div class="trend">
+                            <img src="" alt="Profile Pic">
+                            <p>
+                                <span>@teganan</span><br>
+                                <span>World Peace Builder</span>
+                            </p>
+                        </div>
+                        <div class="trend">
+                            <img src="" alt="Profile Pic">
+                            <p>
+                                <span>@Dankol</span><br>
+                                <span>Super Cool Project</span>
+                            </p>
+                        </div>
+                        <div class="trend">
+                            <img src="" alt="Profile Pic">
+                            <p>
+                                <span>@kendall</span><br>
+                                <span>Life Changing App</span>
+                            </p>
+                        </div>
+                        <div class="trend">
+                            <img src="" alt="Profile Pic">
+                            <p>
+                                <span>@alex</span><br>
+                                <span>No Traffic Maker</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
 </body>
 </html>
+
+
