--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="" alt="Dashboard Logo">
                 <h3>Dashboard</h3>
             </div>
-            <div class="menu">
+            <div class="menu-main">
                 <ul>
                     <li>
                         <img src="" alt="Home">
@@ -42,6 +42,8 @@
                         <p>Communication</p>
                     </li>
                 </ul>
+            </div>
+            <div class="menu-secondary">
                 <ul>
                     <li>
                         <img src="" alt="Settings">
@@ -59,7 +61,7 @@
             </div>
         </div>
 
-        <div class="header">
+        <div class="header-container">
             <div class="search">
                 <label for="search-field"><img src="" alt="Search Icon"></label>
                 <input type="text" id="search-field">
@@ -72,7 +74,7 @@
             </div>
         
             <div class="welcome">
-                <img src="" alt="Profile Picture">
+                <img src="" alt="Profile Picture" id="welcome-profile-picture">
                 <p>Hi there,</p>
                 <p>Daniel Kolocka (@Dankol)</p>
             </div>
@@ -84,73 +86,75 @@
             </div>
         </div>
 
-        <div class="main">
+        <div class="main-content">
             <div class="projects">
                 <h3>Your Projects</h3>
-                <div class="project">
-                    <div class="textSection">
-                        <h5>Super Cool Project</h5>
-                        <p>This is my first project. Very cool project to start with. Was a lot of fun!</p>
+                <div class="projects-container">
+                    <div class="project">
+                        <div class="textSection">
+                            <h5>Super Cool Project</h5>
+                            <p>This is my first project. Very cool project to start with. Was a lot of fun!</p>
+                        </div>
+                        <div class="buttonSection">
+                            <img src="" alt="Star Icon">
+                            <img src="" alt="Delete Icon">
+                            <img src="" alt="Share Icon">
+                        </div>
                     </div>
-                    <div class="buttonSection">
-                        <img src="" alt="Star Icon">
-                        <img src="" alt="Delete Icon">
-                        <img src="" alt="Share Icon">
+                    <div class="project">
+                        <div class="textSection">
+                            <h5>Quantum Commit</h5>
+                            <p>This is my 2nd project. Very cool project. Was a lot of fun! I am still learning</p>
+                        </div>
+                        <div class="buttonSection">
+                            <img src="" alt="Star Icon">
+                            <img src="" alt="Delete Icon">
+                            <img src="" alt="Share Icon">
+                        </div>
                     </div>
-                </div>
-                <div class="project">
-                    <div class="textSection">
-                        <h5>Quantum Commit</h5>
-                        <p>This is my 2nd project. Very cool project. Was a lot of fun! I am still learning</p>
+                    <div class="project">
+                        <div class="textSection">
+                            <h5>Build Better Bots</h5>
+                            <p>This is my 3rd project.</p>
+                        </div>
+                        <div class="buttonSection">
+                            <img src="" alt="Star Icon">
+                            <img src="" alt="Delete Icon">
+                            <img src="" alt="Share Icon">
+                        </div>
                     </div>
-                    <div class="buttonSection">
-                        <img src="" alt="Star Icon">
-                        <img src="" alt="Delete Icon">
-                        <img src="" alt="Share Icon">
+                    <div class="project">
+                        <div class="textSection">
+                            <h5>Pug Generator</h5>
+                            <p>This is my 4th project. Very cool project. Was a lot of fun! I feel like I am getting a good grasp on things, but still far from an expert. A few more projects before I feel fully confident.</p>
+                        </div>
+                        <div class="buttonSection">
+                            <img src="" alt="Star Icon">
+                            <img src="" alt="Delete Icon">
+                            <img src="" alt="Share Icon">
+                        </div>
                     </div>
-                </div>
-                <div class="project">
-                    <div class="textSection">
-                        <h5>Build Better Bots</h5>
-                        <p>This is my 3rd project.</p>
+                    <div class="project">
+                        <div class="textSection">
+                            <h5>Code the Future</h5>
+                            <p>This is my 5th project. Very cool project. Was a lot of fun! I am getting much better</p>
+                        </div>
+                        <div class="buttonSection">
+                            <img src="" alt="Star Icon">
+                            <img src="" alt="Delete Icon">
+                            <img src="" alt="Share Icon">
+                        </div>
                     </div>
-                    <div class="buttonSection">
-                        <img src="" alt="Star Icon">
-                        <img src="" alt="Delete Icon">
-                        <img src="" alt="Share Icon">
-                    </div>
-                </div>
-                <div class="project">
-                    <div class="textSection">
-                        <h5>Pug Generator</h5>
-                        <p>This is my 4th project. Very cool project. Was a lot of fun! I feel like I am getting a good grasp on things, but still far from an expert. A few more projects before I feel fully confident.</p>
-                    </div>
-                    <div class="buttonSection">
-                        <img src="" alt="Star Icon">
-                        <img src="" alt="Delete Icon">
-                        <img src="" alt="Share Icon">
-                    </div>
-                </div>
-                <div class="project">
-                    <div class="textSection">
-                        <h5>Code the Future</h5>
-                        <p>This is my 5th project. Very cool project. Was a lot of fun! I am getting much better</p>
-                    </div>
-                    <div class="buttonSection">
-                        <img src="" alt="Star Icon">
-                        <img src="" alt="Delete Icon">
-                        <img src="" alt="Share Icon">
-                    </div>
-                </div>
-                <div class="project">
-                    <div class="textSection">
-                        <h5>Pixels to Protocols</h5>
-                        <p>This is my last project. Very cool project to end it on. Was a lot of fun and a great learning experience!</p>
-                    </div>
-                    <div class="buttonSection">
-                        <img src="" alt="Star Icon">
-                        <img src="" alt="Delete Icon">
-                        <img src="" alt="Share Icon">
+                    <div class="project">
+                        <div class="textSection">
+                            <h5>Pixels to Protocols</h5>
+                            <p>This is my last project. Very cool project to end it on. Was a lot of fun and a great learning experience!</p>
+                        </div>
+                        <div class="buttonSection">
+                            <img src="" alt="Star Icon">
+                            <img src="" alt="Delete Icon">
+                            <img src="" alt="Share Icon">
+                        </div>
                     </div>
                 </div>
             </div>
