--- a/index.html
+++ b/index.html
@@ -12,77 +12,82 @@
 
         <div class="sidebar">
             <div class="logo">
-                <img src="" alt="Dashboard Logo">
-                <h3>Dashboard</h3>
+                <img src="./imgs/atv.svg" alt="Dashboard Logo" class="logo-image">
+                <h3 class="logo-text">Dashboard</h3>
             </div>
             <div class="menu-main">
                 <ul>
                     <li>
-                        <img src="" alt="Home">
-                        <p>Home</p>
+                        <img src="./imgs/home-account.svg" alt="Home" class="icon">
+                        <p class="icon-text">Home</p>
                     </li>
                     <li>
-                        <img src="" alt="Profile">
-                        <p>Profile</p>
+                        <img src="./imgs/account-box.svg" alt="Profile" class="icon">
+                        <p class="icon-text">Profile</p>
                     </li>
                     <li>
-                        <img src="" alt="Messages">
-                        <p>Messages</p>
+                        <img src="./imgs/message-bulleted.svg" alt="Messages" class="icon">
+                        <p class="icon-text">Messages</p>
                     </li>
                     <li>
-                        <img src="" alt="History">
-                        <p>History</p>
+                        <img src="./imgs/history.svg" alt="History" class="icon">
+                        <p class="icon-text">History</p>
                     </li>
                     <li>
-                        <img src="" alt="Tasks">
-                        <p>Tasks</p>
+                        <img src="./imgs/book-open-page-variant-outline.svg" alt="Tasks" class="icon">
+                        <p class="icon-text">Tasks</p>
                     </li>
                     <li>
-                        <img src="" alt="Communication">
-                        <p>Communication</p>
+                        <img src="./imgs/account-group.svg" alt="Communication" class="icon">
+                        <p class="icon-text">Communication</p>
                     </li>
                 </ul>
             </div>
             <div class="menu-secondary">
                 <ul>
                     <li>
-                        <img src="" alt="Settings">
-                        <p>Settings</p>
+                        <img src="./imgs/cog-outline.svg" alt="Settings" class="icon">
+                        <p class="icon-text">Settings</p>
                     </li>
                     <li>
-                        <img src="" alt="Support">
-                        <p>Support</p>
+                        <img src="./imgs/help-box.svg" alt="Support" class="icon">
+                        <p class="icon-text">Support</p>
                     </li>
                     <li>
-                        <img src="" alt="Privacy">
-                        <p>Privacy</p>
+                        <img src="./imgs/security.svg" alt="Privacy" class="icon">
+                        <p class="icon-text">Privacy</p>
                     </li>
                 </ul>
             </div>
         </div>
 
         <div class="header-container">
-            <div class="search">
-                <label for="search-field"><img src="" alt="Search Icon"></label>
-                <input type="text" id="search-field">
-            </div>
+            <div class="top-section">
+                <div class="search">
+                    <label for="search-field"><img src="./imgs/magnify.svg" alt="Search Icon" class="icon"></label>
+                    <input type="text" id="search-field">
+                </div>
 
-            <div class="profile">
-                <img src="" alt="Bell Icon">
-                <img src="" alt="Profile Picture">
-                <h3 class="">Daniel Kolocka</h3>
+                <div class="profile">
+                    <img src="./imgs/bell-ring-outline.svg" alt="Bell Icon" class="icon">
+                    <img src="./imgs/charlesdeluvio-pOUA8Xay514-unsplash.jpg" alt="Profile Picture" class="profile-image">
+                    <h3 class="">Daniel Kolocka</h3>
+                </div>
             </div>
-        
-            <div class="welcome">
-                <img src="" alt="Profile Picture" id="welcome-profile-picture">
-                <p>Hi there,</p>
-                <p>Daniel Kolocka (@Dankol)</p>
-            </div>
+            <div class="bottom-section">
+                <div class="welcome">
+                    <img src="./imgs/charlesdeluvio-pOUA8Xay514-unsplash.jpg" alt="Profile Picture" id="welcome-profile-picture" class="profile-image">
+                    <div class="welcome-text">
+                        <p class="hi">Hi there,</p>
+                        <p class="name">Daniel Kolocka (@Dankol)</p>
+                    </div>
+                </div>
 
-            <div class="dataButtons">
-                <button class="headerButton">New</button>
-                <button class="headerButton">Upload</button>
-                <button class="headerButton">Share</button>
+                <div class="dataButtons">
+                    <button class="headerButton">New</button>
+                    <button class="headerButton">Upload</button>
+                    <button class="headerButton">Share</button>
+                </div>
             </div>
         </div>
 
@@ -96,9 +101,9 @@
                             <p>This is my first project. Very cool project to start with. Was a lot of fun!</p>
                         </div>
                         <div class="buttonSection">
-                            <img src="" alt="Star Icon">
-                            <img src="" alt="Delete Icon">
-                            <img src="" alt="Share Icon">
+                            <img src="./imgs/star-plus.svg" alt="Star Icon" class="icon">
+                            <img src="./imgs/eye-plus.svg" alt="Follow Icon" class="icon">
+                            <img src="./imgs/share-outline.svg" alt="Share Icon" class="icon">
                         </div>
                     </div>
                     <div class="project">
@@ -107,9 +112,9 @@
                             <p>This is my 2nd project. Very cool project. Was a lot of fun! I am still learning</p>
                         </div>
                         <div class="buttonSection">
-                            <img src="" alt="Star Icon">
-                            <img src="" alt="Delete Icon">
-                            <img src="" alt="Share Icon">
+                            <img src="./imgs/star-plus.svg" alt="Star Icon" class="icon">
+                            <img src="./imgs/eye-plus.svg" alt="Follow Icon" class="icon">
+                            <img src="./imgs/share-outline.svg" alt="Share Icon" class="icon">
                         </div>
                     </div>
                     <div class="project">
@@ -118,9 +123,9 @@
                             <p>This is my 3rd project.</p>
                         </div>
                         <div class="buttonSection">
-                            <img src="" alt="Star Icon">
-                            <img src="" alt="Delete Icon">
-                            <img src="" alt="Share Icon">
+                            <img src="./imgs/star-plus.svg" alt="Star Icon" class="icon">
+                            <img src="./imgs/eye-plus.svg" alt="Follow Icon" class="icon">
+                            <img src="./imgs/share-outline.svg" alt="Share Icon" class="icon">
                         </div>
                     </div>
                     <div class="project">
@@ -129,9 +134,9 @@
                             <p>This is my 4th project. Very cool project. Was a lot of fun! I feel like I am getting a good grasp on things, but still far from an expert. A few more projects before I feel fully confident.</p>
                         </div>
                         <div class="buttonSection">
-                            <img src="" alt="Star Icon">
-                            <img src="" alt="Delete Icon">
-                            <img src="" alt="Share Icon">
+                            <img src="./imgs/star-plus.svg" alt="Star Icon" class="icon">
+                            <img src="./imgs/eye-plus.svg" alt="Follow Icon" class="icon">
+                            <img src="./imgs/share-outline.svg" alt="Share Icon" class="icon">
                         </div>
                     </div>
                     <div class="project">
@@ -140,9 +145,9 @@
                             <p>This is my 5th project. Very cool project. Was a lot of fun! I am getting much better</p>
                         </div>
                         <div class="buttonSection">
-                            <img src="" alt="Star Icon">
-                            <img src="" alt="Delete Icon">
-                            <img src="" alt="Share Icon">
+                            <img src="./imgs/star-plus.svg" alt="Star Icon" class="icon">
+                            <img src="./imgs/eye-plus.svg" alt="Follow Icon" class="icon">
+                            <img src="./imgs/share-outline.svg" alt="Share Icon" class="icon">
                         </div>
                     </div>
                     <div class="project">
@@ -151,9 +156,9 @@
                             <p>This is my last project. Very cool project to end it on. Was a lot of fun and a great learning experience!</p>
                         </div>
                         <div class="buttonSection">
-                            <img src="" alt="Star Icon">
-                            <img src="" alt="Delete Icon">
-                            <img src="" alt="Share Icon">
+                            <img src="./imgs/star-plus.svg" alt="Star Icon" class="icon">
+                            <img src="./imgs/eye-plus.svg" alt="Follow Icon" class="icon">
+                            <img src="./imgs/share-outline.svg" alt="Share Icon" class="icon">
                         </div>
                     </div>
                 </div>
