add final touches and fixed sizing between annoucements and trending

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                 <div class="projects-container">
                     <div class="project">
                         <div class="textSection">
-                            <h5 class="project-title">Super Cool Project</h5>
-                            <p>This is my first project. Very cool project to start with. Was a lot of fun!</p>
+                            <h5 class="project-title">Reality Blender</h5>
+                            <p>A Chrome extension that lets users rewrite headlines and article summaries on any news site to say what they wish the world looked like. "Global Warming Solved" or "You Now Have 6-Pack Abs." Save and share your alternate reality feed with friends. Bonus: AI-generated fake article blurbs to match.</p>
                         </div>
                         <div class="buttonSection">
                             <img src="./imgs/star-plus.svg" alt="Star Icon" class="icon">
@@ -109,7 +109,7 @@
                     <div class="project">
                         <div class="textSection">
                             <h5 class="project-title">Quantum Commit</h5>
-                            <p>This is my 2nd project. Very cool project. Was a lot of fun! I am still learning</p>
+                            <p>A chaotic Git extension that randomly shuffles your commit messages across branches — based on a "quantum uncertainty" principle. You won’t know what commit message you pushed until you check it later. It’s Schrödinger’s version control system — your code both fixed the bug and caused production to crash.</p>
                         </div>
                         <div class="buttonSection">
                             <img src="./imgs/star-plus.svg" alt="Star Icon" class="icon">
@@ -119,8 +119,8 @@
                     </div>
                     <div class="project">
                         <div class="textSection">
-                            <h5 class="project-title">Build Better Bots</h5>
-                            <p>This is my 3rd project.</p>
+                            <h5 class="project-title">Echo Chamber Simulator</h5>
+                            <p>A social media simulator that amplifies your opinions to absurd levels. Type a belief, and the app will flood you with fake posts, AI-generated comments, and graphs confirming your stance until you're fully convinced you're a genius. Great for showcasing how echo chambers distort reality.</p>
                         </div>
                         <div class="buttonSection">
                             <img src="./imgs/star-plus.svg" alt="Star Icon" class="icon">
@@ -131,7 +131,7 @@
                     <div class="project">
                         <div class="textSection">
                             <h5 class="project-title">Pug Generator</h5>
-                            <p>This is my 4th project. Very cool project. Was a lot of fun! I feel like I am getting a good grasp on things, but still far from an expert. A few more projects before I feel fully confident.</p>
+                            <p>A joyful app that generates infinite AI-created pugs in absurd scenarios — pugs in space, pugs as samurai, pugs made of noodles. Users can choose filters like "Cyberpunk," "Historical," or "Underwater Opera." Every click is a new pug-based masterpiece. Bonus: export as NFT (but ironically).</p>
                         </div>
                         <div class="buttonSection">
                             <img src="./imgs/star-plus.svg" alt="Star Icon" class="icon">
@@ -141,8 +141,8 @@
                     </div>
                     <div class="project">
                         <div class="textSection">
-                            <h5 class="project-title">Code the Future</h5>
-                            <p>This is my 5th project. Very cool project. Was a lot of fun! I am getting much better</p>
+                            <h5 class="project-title">Code Dungeon</h5>
+                            <p>A terminal-based dungeon crawler where your code is your weapon. Solve coding puzzles to defeat monsters, unlock spells by writing clean functions, and level up your character by passing tests. Imagine Vim meets Dark Souls.</p>
                         </div>
                         <div class="buttonSection">
                             <img src="./imgs/star-plus.svg" alt="Star Icon" class="icon">
@@ -152,8 +152,8 @@
                     </div>
                     <div class="project">
                         <div class="textSection">
-                            <h5 class="project-title">Pixels to Protocols</h5>
-                            <p>This is my last project. Very cool project to end it on. Was a lot of fun and a great learning experience!</p>
+                            <h5 class="project-title">Meme Stock Casino</h5>
+                            <p>A stock market simulator where tickers are based on memes, internet drama, and random trends (e.g., $ZUCK, $DOGEWASH, $TAYLOR). Prices change based on simulated viral events. Build a portfolio and survive market crashes like “Kanye Rage Tweet 3.0.”</p>
                         </div>
                         <div class="buttonSection">
                             <img src="./imgs/star-plus.svg" alt="Star Icon" class="icon">
@@ -181,7 +181,7 @@
                 </div>
             </div>
             <div class="trending">
-                <h3>Trending</h3>
+                <h3 class="trending-title">Trending</h3>
                 <div class="trending-content">
                     <div class="trend">
                         <img src="./imgs/user1.png" alt="Profile Pic" class="profile-image">
